--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,19 @@ gemfile:
   - ci/Gemfile.rails-3.1.x
   - ci/Gemfile.rails-3.2.x
   - ci/Gemfile.rails-4.0.x
+
 env:
   - DB=sqlite3
   - DB=mysql
   - DB=postgresql
+
 script: bundle exec rake
 
 before_script:
   - mysql -e 'create database closure_tree_test'
   - psql -c 'create database closure_tree_test' -U postgres
 
+matrix:
+  exclude:
+    - rvm: 1.8.7
+      gemfile: ci/Gemfile.rails-4.0.x
