--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,10 @@ matrix:
   exclude:
     - rvm: 1.8.7
       gemfile: ci/Gemfile.rails-4.0.x
+      env: DB=sqlite3
+    - rvm: 1.8.7
+      gemfile: ci/Gemfile.rails-4.0.x
+      env: DB=mysql
+    - rvm: 1.8.7
+      gemfile: ci/Gemfile.rails-4.0.x
+      env: DB=postgresql
